# Fluence.io

./: .gitignore  CLAUDE.md  DEPLOY.html  DEPLOY.md  PROJECT.html  PROJECT.md  README.md  designsystem.html  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/agent/: Cargo.toml  package.json
apps/agent/src/: main.rs
apps/deploy/laserkerf/: .env.example  Caddyfile.snippet  Dockerfile  README.md  docker-compose.yml  nginx.conf
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  styles.css
apps/web/src/editor/: CamPanel.tsx  EditorCanvas.tsx  Toolbar.tsx  store.ts
docs/: 01-feasibility-study.html  01-feasibility-study.md  02-development-plan.html  02-development-plan.md  03-implementation-plan.html  03-implementation-plan.md  04-deployment-plan.md  06-decision-log.html  06-decision-log.md  CLAUDE.md  README.md
e2e/: offline.spec.ts
tools/golden/src/: golden.test.ts
